[package]
name = "magnetite_libp2p"
version = "0.1.0"
authors = ["Sam Mohr <sam@mohr.codes>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }
libp2p = { version = "*", features = ["default"] }
futures = "*"
bytes = "*"
serde = { version = "1.0", features = ["derive"] }
